<resources>
    <string name="app_name">SocialEyeZ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_not_enabled">Wifi Not Enabled</string>
    <string name="error_wifi_not_enabled_please_enable">Your wifi connection is not enabled. Please enable your wifi connection first, then start the application again.</string>
    <string name="no_one_online">Currently no one is in online</string>
    <string name="contact_list">Contact List</string>
    <string name="user_name">User Name</string>
    <string name="user_comment">User Comment</string>
    <string name="status">Status</string>
    <string name="select_pic">Select Picture</string>
    <string name="post">Post</string>
    <string name="select_option">Select Options</string>
    <string name="capture">Capture</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <string name="tap_to_change"><u>Tap to Change</u></string>
    <string name="save">Save</string>
    <string name="nearest_people">Nearest People</string>
    <string name="gallery">Gallery</string>
    <string name="select_photo">Select Photo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_chatting_popup_text">Similar status found in nearest people.\nWant to chat?</string>
    <string name="chat_room">Chat Rooms</string>
</resources>
