<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:background="@drawable/profile_image_bg"
            android:gravity="center">
            <com.siliconorchard.notification.widget.CircularImageView
                android:id="@+id/civ_profile"
                android:layout_width="217dp"
                android:layout_height="217dp"
                android:src="@drawable/ic_pp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_tap_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_change"
            android:textSize="18sp"
            android:textColor="@color/theme_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="2dp">
            <LinearLayout
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/theme_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/user_name"
                    android:textColor="@color/theme_color"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="28sp"
                        android:text="@string/user_name"
                        android:maxLength="128"
                        android:textColor="@color/theme_color"/>

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:visibility="gone"
                        android:hint="@string/user_name"
                        android:textColor="@color/theme_color"/>

                    <ImageView
                        android:id="@+id/iv_edit_name"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:background="@color/theme_color"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="2dp">
            <LinearLayout
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/theme_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/status"
                    android:textColor="@color/theme_color"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:text="@string/status"
                        android:textColor="@color/theme_color"
                        android:scrollbars = "vertical"
                        android:maxLines="2"/>

                    <EditText
                        android:id="@+id/et_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:visibility="gone"
                        android:hint="@string/status"
                        android:maxLength="128"
                        android:textColor="@color/theme_color"/>

                    <ImageView
                        android:id="@+id/iv_edit_status"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:background="@color/theme_color"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:background="@drawable/theme_button_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>